[gd_scene load_steps=2 format=3 uid="uid://health_ui_scene"]

[ext_resource type="Script" path="res://health_ui.gd" id="1"]

[node name="HealthUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 120.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 280.0
offset_bottom = 100.0

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(260, 30)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "‚ù§Ô∏è 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HungerBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(260, 30)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HungerLabel" type="Label" parent="VBoxContainer/HungerBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "üçñ 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WellFedIndicator" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "‚ú® Well Fed (Health Regen Active)"
horizontal_alignment = 1
modulate = Color(0.5, 1.0, 0.5, 1)
